--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <head>
   <title>occupyinter.net &ndash; animated GIF army &ndash; embeds, browser addons, website hijacks</title>
   <link href='stylesheets/frontpage.css' media='screen' rel='stylesheet' type='text/css' />
+  <script src='days-counter.js' type='text/javascript'></script>
 </head>
 <body>
   <div id='container'>
+    <div style='background: #fff3cd; border: 2px solid #ffc107; padding: 12px 20px; margin: 0 0 20px 0; text-align: center; font-size: 14px;'>
+      This site is an archive of a <a href='https://fffff.at' style='font-weight: bold; color: #000;'>F.A.T. Lab</a> project from October 2011. <a href='https://fffff.at/occupy-the-internet/' style='font-weight: bold; color: #000;'>Read more</a>
+    </div>
     <div id='header'>
       <h1>
         <a href='index.html'>Occupy The Internet</a>
@@ -14,8 +18,8 @@
           <li><a href="index.html#embeddable-protest">Embeddable Protest</a></li>
           <li><a href="index.html#browser-addons">Browser Addons</a></li>
           <li><a href="index.html#site-hijack">Site Hijack</a></li>
-          <li><a href="https://occupyinter.net/stats">Stats</a></li>
-          <li><a href="https://occupyinter.net/sites">Full Site List</a></li>
+          <li><a href="stats.html">Stats</a></li>
+          <li><a href="sites.html">Full Site List</a></li>
           <li><a href="index.html#about">About</a></li>
         </ul>
       </div>
