revert embed.js, add separate archive-counter.js
* reverted embed.js to original - keeps it working for external embeds
* created archive-counter.js for days-since-launch counter
* loads on archive pages only (index, stats, sites)

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           Code development by <a href="http://jamiedubs.com/">Jamie</a>, <a href="http://gleuch.com">Greg</a>, <a href="http://theowatson.com">Theo</a>, and <a href="http://tobi-x.com">Tobi</a>.
         </p>
         <script id='embed_demo' src='embed.js'></script>
+        <script src='archive-counter.js'></script>
       </div>
     </div>
     <div id='footer'>
