--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>occupyinter.net &ndash; animated GIF army &ndash; embeds, browser addons, website hijacks</title>
   <link href='stylesheets/frontpage.css' media='screen' rel='stylesheet' type='text/css' />
 </head>
