--- a/sites.html
+++ b/sites.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Full Site List &ndash; occupyinter.net</title>
   <link href='stylesheets/frontpage.css' media='screen' rel='stylesheet' type='text/css' />
   <style>
@@ -20,6 +21,12 @@
     .sites-approximation ul {
       list-style: disc;
       margin-left: 20px;
+    }
+    @media (max-width: 768px) {
+      #sites-list {
+        column-count: 1 !important;
+        font-size: 0.8em !important;
+      }
     }
   </style>
 </head>
