Make it more mobile friendly

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>
           Add the animated GIF army to websites you control (or can get control of) by pasting the following code into any HTML file:
         </p>
-        <textarea cols='100' id='embed_code' onclick='this.select()' readonly='readonly' rows='2'><script src="embed.js"></script></textarea>
+        <textarea id='embed_code' onclick='this.select()' readonly='readonly' rows='2'><script src="embed.js"></script></textarea>
         <p>
           For the full list of occupied websites visit <a href="http://fffff.at/occupy-the-internet">fffff.at/occupy-the-internet</a>
         </p>
