Fix some styles, add favicon, fix crowd audio

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>occupyinter.net &ndash; animated GIF army &ndash; embeds, browser addons, website hijacks</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.ico">
   <link href='stylesheets/frontpage.css' media='screen' rel='stylesheet' type='text/css' />
 </head>
 <body>
@@ -118,6 +120,8 @@
         <h2>Source Code</h2>
         <p>
           <a href="https://github.com/jamiew/occupy-internet-widget">http://github.com/jamiew/occupy-internet-widget</a> <br />
+          <a href="https://github.com/jamiew/occupyinter.net">http://github.com/jamiew/occupyinter.net</a> <br />
+          <a href="https://github.com/jamiew/occupyinter.net-archive">http://github.com/jamiew/occupyinter.net-archive</a> <br />
           MIT Licensed
         </p>
         <hr />
